Add email links to home page

--- a/index.html
+++ b/index.html
@@ -75,28 +75,32 @@
                 <div id="circle-cover-bg">
                 </div>
             </div>
-        </section>
-        <section>
+
             <div class="container">
                 <p>I love solving problems, even
                     though things get pretty frustrating sometimes! Watch this site evolve as I learn new tricks and
                     upskill. It's great to have you here!</p>
                 <p>p.s. Sometimes things go a bit squiffy in here. Like right now... Please be patient while I figure
-                    out how
-                    I broke it!</p>
+                    out howI broke it!</p>
+                <p>(Bonus points to anyone who <a
+                        href="mailto:laura@ljtalks.com?subject=Website Issue&body=Hi Laura,%0A%0AHere's an issue I found on your site:">emails
+                        me</a> with issues and solutions if you have them!)</p>
             </div>
-        </section>
-        <section id="blog">
-            <div class="container" id="home-blog">
-                <a href="pages/blog.html" class="int-link">
-                    <h2>My Latest Blog</h2>
-                </a>
-                <p>Check out my latest blog posts and updates.</p>
-                <p>I'm very new to coding and fairly new to anything tech, so prepare to cringe at some of the
-                    things I'm thinking and writing about.</p>
-                <p>Send me a comment if I need correcting! Every Day's a School Day, and I know I don't know what I
-                    don't know yet!</p>
-            </div>
+            <section id="blog">
+                <div class="container" id="home-blog">
+                    <a href="pages/blog.html" class="int-link">
+                        <h2>My Latest Blog</h2>
+                    </a>
+                    <p>Check out my latest blog posts and updates.</p>
+                    <p>I'm very new to coding and fairly new to anything tech, so prepare to cringe at some of the
+                        things I'm thinking and writing about.</p>
+                    <p><a
+                            href="mailto:laura@ljtalks.com?subject=Website Correction&body=Hi Laura,%0A%0AHere's a correction for your site:">Send
+                            me a comment if I need correcting!</a> Every Day's a School Day, and I know I don't know
+                        what I
+                        don't know yet!</p>
+                </div>
+            </section>
         </section>
         <section id="home-contact">
             <div class="container">
@@ -118,20 +122,20 @@
                 }
             };
         </script>
-    <footer>
-        <div id="footer">
-            <div class="footer-amazonlink">
-                <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
-                    earn from qualifying purchases.</p>
+        <footer>
+            <div id="footer">
+                <div class="footer-amazonlink">
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
+                        earn from qualifying purchases.</p>
+                </div>
+                <div class="footer-signup">
+                    <a href="signup.html" class="btn-signup">Sign Up!</a>
+                </div>
+                <div class="footer-copyright">
+                    <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+                </div>
             </div>
-            <div class="footer-signup">
-                <a href="signup.html" class="btn-signup">Sign Up!</a>
-            </div>
-            <div class="footer-copyright">
-                <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
