Start to populate the blog index section

--- a/pages/blog-index.html
+++ b/pages/blog-index.html
@@ -78,20 +78,21 @@
         <section class="blog-index-container">
             <!-- Individual blog post listings -->
             <div class="blog-index-item">
-                <div class="blog-date">11-08-2024</div>
+                <div class="blog-date">01-09-2024</div>
                 <div class="blog-title">
-                    <a href="post-link.html">My Rollercoaster Day</a>
+                    <a href="/pages/blog-archive/free-websites.html">Why I'm Offering Free Websites...</a>
                 </div>
-                <div class="blog-excerpt">This is harder than I thought...</div>
+                <div class="blog-excerpt">Building Skills, Relationships, and Trust...</div>
             </div>
             <!-- Individual blog post listings -->
             <div class="blog-index-item">
-                <div class="blog-date">2024-09-01</div>
+                <div class="blog-date">11-08-2024</div>
                 <div class="blog-title">
-                    <a href="post-link.html">Blog Post Title</a>
+                    <a href="/pages/blog-archive/blog-this-is-harder-than-i-thought.html">Rollercoaster Day: Struggles with Blog Design and JavaScript</a>
                 </div>
-                <div class="blog-excerpt">This is the first few lines of the blog post...</div>
+                <div class="blog-excerpt">This is harder than I thought...</div>
             </div>
+            <p></p>
             <!-- Individual blog post listings 
             <div class="blog-index-item">
                 <div class="blog-date">2024-09-01</div>
