--- a/pages/blog-archive/blog-this-is-harder-than-i-thought.html
+++ b/pages/blog-archive/blog-this-is-harder-than-i-thought.html
@@ -50,6 +50,15 @@
         ml('account', '1050017');
     </script>
     <!-- End MailerLite Universal -->
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BFVTQ40NWJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BFVTQ40NWJ');
+</script>
 
 </head>
 
