Changed in text links to go to prepopulated contact form, think I need to add the JS to contact.html for it to work

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h2 id="hello">Hello!</h2>
                 <p>My little space to share my progress, projects, and experiences as I navigate the world of
                     coding and freelancing.</p>
-                <p>I'm currently 7 weeks into my coding journey (and a year into Digital Freelancing)! I'm loving every
+                <p>I'm currently 10 weeks into my coding journey (and a year into Digital Freelancing)! I'm loving every
                     minute.</p>
             </div>
             <div id="myphoto">
@@ -90,9 +90,9 @@
                     though things get pretty frustrating sometimes! Watch this site evolve as I learn new tricks and
                     upskill. It's great to have you here!</p>
                 <p>p.s. Sometimes things go a bit squiffy in here. Like right now... Please be patient while I figure
-                    out howI broke it!</p>
-                <p>(Bonus points to anyone who <a
-                        href="mailto:laura@ljtalks.com?subject=Website Issue&body=Hi Laura,%0A%0AHere's an issue I found on your site:">emails
+                    out how I broke it!</p>
+                <p>(Bonus points to anyone who
+                    <a href="/pages/contact.html?subject=Website%20Issue&body=Hi%20Laura,%0A%0AHere's%20an%20issue%20I%20found%20on%20your%20site:">emails
                         me</a> with issues and solutions if you have them!)</p>
             </div>
             <section id="blog">
@@ -104,7 +104,7 @@
                     <p>I'm very new to coding and fairly new to anything tech, so prepare to cringe at some of the
                         things I'm thinking and writing about.</p>
                     <p><a
-                            href="mailto:laura@ljtalks.com?subject=Website Correction&body=Hi Laura,%0A%0AHere's a correction for your site:">Send
+                            href="/pages/contact.html?subject=Correction&body=Hi Laura,%0A%0AHere's a correction for your site:">Send
                             me a comment if I need correcting!</a> Every Day's a School Day, and I know I don't know
                         what I
                         don't know yet!</p>
